Beautify and color fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,26 +10,38 @@
             <div class="col-5 col-lg-2 mb-3">
                 <h5 class="text-white weight-700">Documentation</h5>
                 <div class="small pt-1">
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/documentation"><span>Overview</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/documentation#search-input"><span>Search Docs</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
+                            href="/documentation"><span>Overview</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
+                            href="/documentation#search-input"><span>Search Docs</span></a></div>
                 </div>
             </div>
             <div class="col-5 col-lg-2 mb-3">
                 <h5 class="text-white weight-700">Contribute</h5>
                 <div class="small pt-1">
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/contribute#users"><span>Users</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/contribute#developers"><span>Developers</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/contribute#documentation"><span>Documentation</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/contribute#donation"><span>Donate</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
+                            href="/contribute#users"><span>Users</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
+                            href="/contribute#developers"><span>Developers</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
+                            href="/contribute#documentation"><span>Documentation</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
+                            href="/contribute#donation"><span>Donate</span></a></div>
                 </div>
             </div>
             <div class="col-5 col-lg-2 mb-3">
                 <h5 class="text-white weight-700">Download</h5>
                 <div class="small pt-1">
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener" href="https://play.google.com/store/apps/details?id=com.fsck.k9"><span>Play Store</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener" href="https://f-droid.org/packages/com.fsck.k9/"><span>F-Droid</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener" href="https://github.com/k9mail/k-9/releases"><span>GitHub</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener" href="https://www.amazon.com/K-9-Dog-Walkers-Mail/dp/B004JK61K0/"><span>Amazon</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener"
+                            href="https://play.google.com/store/apps/details?id=com.fsck.k9"><span>Play Store</span></a>
+                    </div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener"
+                            href="https://f-droid.org/packages/com.fsck.k9/"><span>F-Droid</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener"
+                            href="https://github.com/k9mail/k-9/releases"><span>GitHub</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener"
+                            href="https://www.amazon.com/K-9-Dog-Walkers-Mail/dp/B004JK61K0/"><span>Amazon</span></a>
+                    </div>
                 </div>
             </div>
             <div class="col-5 col-lg-2 mb-3">
@@ -37,20 +49,27 @@
                 <div class="small pt-1">
                     <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/about"><span>About</span></a></div>
                     <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/team"><span>Team</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/contribute"><span>Contribute</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray" href="/community"><span>Community</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
+                            href="/contribute"><span>Contribute</span></a></div>
+                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
+                            href="/community"><span>Community</span></a></div>
                 </div>
             </div>
             <div class="col-5 col-lg-2">
                 <h5 class="text-white weight-700 pb-1">Social</h5>
-                <a class="mr-2 text-gray" href="https://github.com/k9mail" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
-                <a class="mr-2 text-gray" href="https://twitter.com/k9mail_app" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
-                <a rel="me" class="mr-2 text-gray" href="https://fosstodon.org/@k9mail" target="_blank" rel="noopener"><i class="fab fa-mastodon"></i></a>
+                <a class="mr-2 text-gray" href="https://github.com/k9mail" target="_blank" rel="noopener"><i
+                        class="fab fa-github"></i></a>
+                <a class="mr-2 text-gray" href="https://twitter.com/k9mail_app" target="_blank" rel="noopener"><i
+                        class="fab fa-twitter"></i></a>
+                <a rel="me" class="mr-2 text-gray" href="https://fosstodon.org/@k9mail" target="_blank"
+                    rel="noopener"><i class="fab fa-mastodon"></i></a>
             </div>
         </div>
         <div class="d-block d-lg-flex justify-content-between pt-0 pb-3">
             <div class="small mb-2 mb-lg-0">
-                <p class="top-border mb-1"></p><span class="copyright">&copy; {{ 'now' | date: "%Y" }} K-9 Mail</span><span class="copyright mx-2">|</span><span class="copyright"><a class="copyright underline-hover" href="/privacy">Privacy Policy</a></span>
+                <p class="top-border mb-1"></p><span class="copyright">&copy; {{ 'now' | date: "%Y" }} K-9
+                    Mail</span><span class="copyright mx-2">|</span><span class="copyright"><a
+                        class="copyright underline-hover" href="/privacy">Privacy Policy</a></span>
             </div>
         </div>
     </div>
