--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,17 @@
         <div class="row justify-content-between align-items-center py-3">
             <div class="col-12 col-md-7 order-2 order-md-1">
                 <h2 class="text-main size-42">Advanced Email for Android</h2>
-                <p class="size-20 mb-4 text-main">K-9 Mail is an open source email client focused on making it easy to chew through large volumes of email.</p>
+                <p class="size-20 mb-4 text-main">K-9 Mail is an open source email client focused on making it easy to
+                    chew through large volumes of email.</p>
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-6 full-width-md"><a href="/download" class="hero">Download <i class="fas fa-arrow-right pl-1"></i></a></div>
-                    <div class="col-12 col-md-6 full-width-md margin-negative"><a class="action" href="/contribute">Contribute <i class="fas fa-arrow-right pl-1"></i></a></div>
+                    <div class="col-12 col-md-6 full-width-md"><a href="/download" class="hero">Download <i
+                                class="fas fa-arrow-right pl-1"></i></a></div>
+                    <div class="col-12 col-md-6 full-width-md margin-negative"><a class="action"
+                            href="/contribute">Contribute <i class="fas fa-arrow-right pl-1"></i></a></div>
                 </div>
             </div>
-            <div class="col-12 col-md-5 order-1 order-md-2 pl-md-0 mb-4 mb-md-0 d-none d-md-none d-lg-block"><img class="w-100" src="assets/img/header.png" alt="Phone with K9 asset" /></div>
+            <div class="col-12 col-md-5 order-1 order-md-2 pl-md-0 mb-4 mb-md-0 d-none d-md-none d-lg-block"><img
+                    class="w-100" src="assets/img/header.png" alt="Phone with K9 asset" /></div>
         </div>
     </div>
 </div>
