Remove documentation and point to docs.k9mail.app

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,7 @@
                 <h5 class="text-white weight-700">Documentation</h5>
                 <div class="small pt-1">
                     <div class="mb-2 size-14 weight-400"><a class="text-gray"
-                            href="/documentation"><span>Overview</span></a></div>
-                    <div class="mb-2 size-14 weight-400"><a class="text-gray"
-                            href="/documentation#search-input"><span>Search Docs</span></a></div>
+                            href="https://docs.k9mail.app/"><span>Overview</span></a></div>
                 </div>
             </div>
             <div class="col-5 col-lg-2 mb-3">
