Update repository URLs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
                     <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener"
                             href="https://f-droid.org/packages/com.fsck.k9/"><span>F-Droid</span></a></div>
                     <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener"
-                            href="https://github.com/k9mail/k-9/releases"><span>GitHub</span></a></div>
+                            href="https://github.com/thunderbird/thunderbird-android/releases"><span>GitHub</span></a></div>
                     <div class="mb-2 size-14 weight-400"><a class="text-gray" target="_blank" rel="noopener"
                             href="https://www.amazon.com/K-9-Dog-Walkers-Mail/dp/B004JK61K0/"><span>Amazon</span></a>
                     </div>
