add thunderbird banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 {% include head.html %}
 
 <body>
+    {% include banner.html %}
     {% include nav.html %}
     {% include header.html %}
     {{ content }}
