--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,7 @@
 {% include head.html %}
 
 <body>
+    {% include banner.html %}
     {% include nav.html %}
     {{ content }}
     {% include footer.html %}
